<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">AndroidPriCall</string>
    
    <!-- settingsview Strings -->
    <string name="app_status">PriCall</string>
    <string name="contactlist_buttontext">Set priority callers</string>
	<string name="timersettings_buttontext">Set Timers</string>
	<string name="silence_preferences">Silence:</string>
	<string name="silence_call_pref">Incoming calls</string>
	<string name="silence_sms_pref">Incoming text messages</string>
	
	<!-- timersettingsview Strings -->
	<string name="timertitle">Timer description</string>
	<string name="starttime_buttontext">start time: \n  00:00</string>
	<string name="endtime_buttontext">end time: \n  00:00</string>
</resources>