<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
	    <TextView
	        android:id="@+id/app_status"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:text="@string/app_status"
	        android:textSize="20dp" />

	    <ToggleButton
	        android:id="@+id/app_status_togglebutton"
	        android:checked="false"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginRight="20dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/silence_preferences" />

    <CheckBox
        android:id="@+id/callSilenceCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/silence_call_pref" />

    <CheckBox
        android:id="@+id/smsSilenceCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/silence_sms_pref" />
    
    <Button
        android:id="@+id/contactlistbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactlist_buttontext" />

</LinearLayout>